--- a/cookbooks/node-server/.kitchen.yml
+++ b/cookbooks/node-server/.kitchen.yml
@@ -9,18 +9,16 @@ provisioner:
   #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
 
-verifier:
-  name: inspec
+
 
 platforms:
   - name: ubuntu-16.04
-  - name: centos-7.3
+    driver:
+      box: "ubuntu/trusty64"
+
 
 suites:
   - name: default
     run_list:
       - recipe[node-server::default]
-    verifier:
-      inspec_tests:
-        - test/smoke/default
     attributes:
